Try to fix spacing

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -164,7 +164,6 @@
 <% } -%>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %>
 <% } -%>
-
 \usepackage{lipsum}
 <% if (examples) { -%>
 
@@ -686,13 +685,18 @@ This <% if (heading1 == "\\chapter") {%>chapter<% } else { %>section<% } %> cont
 It focuses on minimal examples, which can be directly adapted to the content
 
 <%- include('paragraphs.example.en.tex', this); %>
-<% if (texlive >= 2021) { %><%- include('mindflow.example.en.tex', this); %><% } -%>
+<% if (texlive >= 2021) { %><%- include('mindflow.example.en.tex', this); %>
+<% } -%>
 <%- include('hyphenation.example.en.tex', this); %>
 <%- include('siunitx.example.en.tex', this); %>
-<% if (enquotes == 'csquotes') { %><%- include('csquotes.example.en.tex', this); %><% } -%>
-<% if (enquotes == 'textcmds') { %><%- include('textcmds.example.en.tex', this); %><% } -%>
-<% if (enquotes == 'plainlatex') { %><%- include('plainlatex.enquotes.example.en.tex', this); %><% } -%>
-<% if (cleveref) { %><%- include('cleveref.example.en.tex', this); %><% } -%>
+<% if (enquotes == 'csquotes') { %><%- include('csquotes.example.en.tex', this); %>
+<% } -%>
+<% if (enquotes == 'textcmds') { %><%- include('textcmds.example.en.tex', this); %>
+<% } -%>
+<% if (enquotes == 'plainlatex') { %><%- include('plainlatex.enquotes.example.en.tex', this); %>
+<% } -%>
+<% if (cleveref) { %><%- include('cleveref.example.en.tex', this); %>
+<% } -%>
 <%- include('figure.example.en.tex', this); %>
 <%- include('subfloat.example.en.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
