--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -136,7 +136,7 @@
 \usepackage[math]{blindtext}
 \usepackage{mwe}
 <% if (useExampleEnvironment) { -%>
-\usepackage{currfile}
+\usepackage[realmainfile]{currfile}
 \usepackage{tcolorbox}
 \tcbuselibrary{<%= listings %>}
 <% } -%>
