--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -171,7 +171,7 @@
 \usepackage[math]{blindtext}
 \usepackage{mwe}
 <% if (useExampleEnvironment) { -%>
-\usepackage{currfile}
+\usepackage[realmainfile]{currfile}
 \usepackage{tcolorbox}
 \tcbuselibrary{<%= listings %>}
 <% } -%>
