--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -2,7 +2,7 @@
 \RequirePackage{snapshot}
 <% } -%>
 <% if (documentclass == 'lncs') { -%>
-% Dieses Template wurde mit der "LLNCS DOCUMENT CLASS -- version 2.20 (10-Mar-2018)" getestet
+% Dieses Template wurde mit der "LLNCS DOCUMENT CLASS -- version 2.21 (12-Jan-2022)" getestet
 
 <% } -%>
 % !TeX spellcheck = de-DE
@@ -28,7 +28,7 @@
 % "runningheads" zeigt Author + Titel auf jeder Seite.
 % Diese Option nach Aufforderung durch die Herausgeber entfernen.
 % Während des Schreibens und das Review des Papers hilft das, um z.B. auf konkrete Seitenzahlen einfach verweisen zu können.
-\documentclass[ngerman,runningheads,a4paper]{llncs}[2018/03/10]
+\documentclass[runningheads,a4paper,ngerman]{llncs}[2022/01/12]
 <% } else {-%>
 \documentclass[
   % fontsize=11pt is the standard
@@ -136,7 +136,7 @@
 \usepackage[math]{blindtext}
 \usepackage{mwe}
 <% if (useExampleEnvironment) { -%>
-\usepackage{currfile}
+\usepackage[realmainfile]{currfile}
 \usepackage{tcolorbox}
 \tcbuselibrary{<%= listings %>}
 <% } -%>
