--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -2,7 +2,7 @@
 \RequirePackage{snapshot}
 <% } -%>
 <% switch (documentclass) { case "lncs": -%>
-% This template has been tested with LLNCS DOCUMENT CLASS -- version 2.20 (10-Mar-2018)
+% This template has been tested with LLNCS DOCUMENT CLASS -- version 2.21 (12-Jan-2022)
 
 <% break; case "ieee": -%>
 % This template has been tested with IEEEtran of 2015.
@@ -37,7 +37,7 @@
 % it is good to have title printed on the pages, too.
 %
 % To disable outputting page headers and footers, remove "runningheads"
-\documentclass[runningheads,a4paper,english]{llncs}[2018/03/10]
+\documentclass[runningheads,a4paper,english]{llncs}[2022/01/12]
 <% break; case "acmart": -%>
 
 <% if (texlive >= 2021) { -%>
@@ -59,7 +59,6 @@
 % Balance the last page using the balance package (see https://ctan.org/pkg/balance)
 \usepackage{balance}
 <% } -%>
-
 <% break; case "scientific-thesis": -%>
 
 % EN: The following package allows \\ at the title page
@@ -172,7 +171,7 @@
 \usepackage[math]{blindtext}
 \usepackage{mwe}
 <% if (useExampleEnvironment) { -%>
-\usepackage{currfile}
+\usepackage[realmainfile]{currfile}
 \usepackage{tcolorbox}
 \tcbuselibrary{<%= listings %>}
 <% } -%>
