--- a/generators/app/templates/biblatex.preamble.en.tex
+++ b/generators/app/templates/biblatex.preamble.en.tex
@@ -22,8 +22,8 @@
 \setcounter{biburllcpenalty}{7000}
 \setcounter{biburlucpenalty}{8000}
 
-%\bibliography{bibliography}
-%\addbibresource[datatype=bibtex]{bibliography.bib}
+\bibliography{<%= filenames.bib %>}
+%\addbibresource[datatype=bibtex]{\bibliography{<%= filenames.bib %>}}
 
 % Do not put "vd" in the label, but put it at "\citeauthor"
 % Source: http://tex.stackexchange.com/a/30277/9075
