Switch to makeglossaries

--- a/generators/app/templates/acronyms.preamble.en.tex
+++ b/generators/app/templates/acronyms.preamble.en.tex
@@ -1,13 +1,15 @@
 \usepackage[
-  abbreviations,% create "abbreviations" glossary
-  nomain,% don't create "main" glossary
-  stylemods=longbooktabs% do the adjustments for the longbooktabs styles
+  abbreviations,         % create "abbreviations" glossary
+  nomain                % don't create "main" glossary
+  %stylemods={mcols},style=mcolindex,
+  %style=indexgroup,
+  %stylemods=longbooktabs % do the adjustments for the longbooktabs styles
 ]{glossaries-extra}
 
 % Following is required if the abbreviation list should be sorted automatically (\printglossary)
-% Not required, because we print the entries in-order (using \printunsrtglossaries)
-% \makeglossaries
+% Not required, if we printed the entries in-order (using \printunsrtglossaries)
+\makeglossaries
 
 \input{acronyms}
 
-\setglossarystyle{long-booktabs}
+%\setglossarystyle{long-booktabs}
