--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -424,7 +424,8 @@
 %\listofalgorithms %Ist nur für Algorithmen, die mittels \begin{algorithm} umschlossen werden, nötig
 
 % Abbreviations
-\printunsrtglossaries
+\printglossaries
+% \printunsrtglossaries cannot be used, because then no indexing happens; source: https://tex.stackexchange.com/a/287128/9075
 
 \microtypesetup{protrusion=true}
 
