--- a/generators/app/templates/acronyms.preamble.en.tex
+++ b/generators/app/templates/acronyms.preamble.en.tex
@@ -1,10 +1,12 @@
 \usepackage[
   abbreviations,         % create "abbreviations" glossary
-  nomain                % don't create "main" glossary
-  %stylemods={mcols},style=mcolindex,
-  %style=indexgroup,
-  %stylemods=longbooktabs % do the adjustments for the longbooktabs styles
+  nomain,                % don't create "main" glossary
+  stylemods=longbooktabs % do the adjustments for the longbooktabs styles
 ]{glossaries-extra}
+\setglossarystyle{long3col-booktabs}
+
+% Hint by https://tex.stackexchange.com/a/463188/9075
+% \usepackage{glossary-longextra}
 
 % Following is required if the abbreviation list should be sorted automatically (\printglossary)
 % Not required, if we printed the entries in-order (using \printunsrtglossaries)
@@ -12,4 +14,3 @@
 
 \input{acronyms}
 
-%\setglossarystyle{long-booktabs}
