Add more hyphenation packages

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -203,6 +203,11 @@
 % Definition of "= taken from http://mirror.ctan.org/macros/latex/contrib/babel-contrib/german/ngermanb.dtx
 \makeatother
 
+% Add manual adapted hyphenation of English words
+% See https://ctan.org/pkg/hyphenex and https://tex.stackexchange.com/a/22892/9075 for details
+% Could not work on MiKTeX
+\input{ushyphex}
+
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
 <% switch (documentclass) { case "acmart": -%>
