--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -43,8 +43,8 @@
   a4paper,  % Standard format - only KOMAScript uses paper=a4 - https://tex.stackexchange.com/a/61044/9075
   twoside,  % we are optimizing for both screen and two-side printing. So the page numbers will jump, but the content is configured to stay in the middle (by using the geometry package)
   bibliography=totoc,
-  %               idxtotoc,   % Index ins Inhaltsverzeichnis
-  %               liststotoc, % List of X ins Inhaltsverzeichnis, mit liststotocnumbered werden die Abbildungsverzeichnisse nummeriert
+  % idxtotoc,   % Index ins Inhaltsverzeichnis
+  % liststotoc, % List of X ins Inhaltsverzeichnis, mit liststotocnumbered werden die Abbildungsverzeichnisse nummeriert
   headsepline,
   cleardoublepage=empty,
   parskip=half,
@@ -169,6 +169,11 @@
   \llncs{book editors and title}{0042} %% 0042 is the start page
 \fi
 <% } -%>
+<% if (documentclass == 'scientific-thesis') { -%>
+
+<% if (feature.acronyms) { -%><%- include('acronyms.preamble.en.tex', this); %><% } -%>
+<%- include('scientific-thesis-cover.preamble.de.tex', this); %>
+<% } -%>
 <% if (latexcompiler == "pdflatex") { -%>
 
 % Enable copy and paste of text from the PDF
@@ -185,8 +190,7 @@
 <% } -%>
 
 \begin{document}
-<% switch (documentclass) {
-  case "lncs": -%>
+<% switch (documentclass) { case "lncs": -%>
 
 \title{Paper Title}
 % If Title is too long, use \titlerunning
@@ -241,10 +245,106 @@ Winery~\cite{Winery} is a graphical \commentontext{modeling}{modeling with one `
 The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } else { %>Binz et al.~\cite<% } %>{Binz2009}.
 <%  break;
 default:  -%>
-\lipsum[1]
-<%
-break;
-} -%>
+\pagenumbering{arabic}
+\Titelblatt
+
+%Eigener Seitenstil fuer die Kurzfassung und das Inhaltsverzeichnis
+\deftriplepagestyle{preamble}{}{}{}{}{}{\pagemark}
+%Doku zu deftriplepagestyle: scrguide.pdf
+\pagestyle{preamble}
+\renewcommand*{\chapterpagestyle}{preamble}
+
+%Kurzfassung / abstract
+%auch im Stil vom Inhaltsverzeichnis
+\section*{Kurzfassung}
+
+<Kurzfassung der Arbeit>
+
+\cleardoublepage
+
+\microtypesetup{protrusion=false}
+
+% In case you have trouble with headings reaching into the page numbers, enable the following three lines.
+% Hint by http://golatex.de/inhaltsverzeichnis-schreibt-ueber-rand-t3106.html
+%
+%\makeatletter
+%\renewcommand{\@pnumwidth}{2em}
+%\makeatother
+%
+% Bei einem ungünstigen Seitenumbruch im Inhaltsverzeichnis, kann dieser mit
+% \addtocontents{toc}{\protect\newpage}
+% an der passenden Stelle im Fließtext erzwungen werden.
+\tableofcontents
+
+\listoffigures
+
+\listoftables
+<% if (listings == 'listings') { -%>
+
+% We use lstlisting environments with caption paramters.
+% Thus, we need that command.
+% Alternative: \listof{Listing}{List of Listings}
+\lstlistoflistings
+<% } else { -%>
+
+\listof{Listing}{Verzeichnis der Listings}
+<% } -%>
+
+%mittels \newfloat wurde die Algorithmus-Gleitumgebung definiert.
+%Mit folgendem Befehl werden alle floats dieses Typs ausgegeben
+%\listof{Algorithmus}{Verzeichnis der Algorithmen}
+%\listofalgorithms %Ist nur für Algorithmen, die mittels \begin{algorithm} umschlossen werden, nötig
+
+% Abkürzungsverzeichnis
+\printnoidxglossaries
+
+\microtypesetup{protrusion=true}
+
+% Headline and footline
+\renewcommand*{\chapterpagestyle}{scrplain}
+\pagestyle{scrheadings}
+\pagestyle{scrheadings}
+\ihead[]{}
+\chead[]{}
+\ohead[]{\headmark}
+\cfoot[]{}
+\ofoot[\usekomafont{pagenumber}\thepage]{\usekomafont{pagenumber}\thepage}
+\ifoot[]{}
+
+\chapter{Einleitung}
+In diesem Kapitel steht die Einleitung zu dieser Arbeit.
+Sie soll nur als Beispiel dienen und hat nichts mit dem Buch \cite{WSPA} zu tun.
+Nun viel Erfolg bei der Arbeit!
+
+Bei \LaTeX\ werden Absätze durch freie Zeilen angegeben.
+Da die Arbeit über ein Versionskontrollsystem versioniert wird, ist es sinnvoll, pro \emph{Satz} eine neue Zeile im \texttt{.tex}-Dokument anzufangen.
+So kann einfacher ein Vergleich von Versionsständen vorgenommen werden.
+
+Die Arbeit ist in folgender Weise gegliedert:
+In \cref{chap:k2} werden die Grundlagen dieser Arbeit beschrieben.
+Schließlich fasst \cref{chap:zusfas} die Ergebnisse der Arbeit zusammen und stellt Anknüpfungspunkte vor.
+
+
+\chapter{Kapitel zwei}
+\label{chap:k2}
+
+Hier wird der Hauptteil stehen.
+Falls mehrere Kapitel gewünscht, entweder mehrmals \texttt{\textbackslash{}chapter} benutzen oder pro Kapitel eine eigene Datei anlegen und \texttt{ausarbeitung.tex} anpassen.
+
+LaTeX-Hinweise stehen in \cref{chap:latextipps}.
+
+%noch etwas Fülltext
+\blinddocument
+
+\chapter{Verwandte Arbeiten}
+Eine Beschreibung relevanter wissenschaftlicher Arbeiten mit Bezug zur eigenen Arbeit. Der Abschnitt kann je nach Kontext auch an anderer Stelle stehen.
+
+\chapter{Zusammenfassung und Ausblick}\label{chap:zusfas}
+Hier bitte einen kurzen Durchgang durch die Arbeit.
+
+\section*{Ausblick}
+...und anschließend einen Ausblick
+<% break; } -%>
 
 <% if (examples) { -%>
 <%= heading1 %>{LaTeX Hinweise}
@@ -318,6 +418,8 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <%- include('minted.example.en.tex', this); %>
 <% } -%>
 <%- include('paralist.example.en.tex', this); %>
+<% if (feature.acronyms) { %><%- include('acronyms.example.de.tex', this); %>
+<% } -%>
 <%- include('otherfeatures.example.en.tex', this); %>
 <% } -%>
 
@@ -350,5 +452,22 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
 %
 Alle Links wurden zuletzt am 29.03.2021 geprüft.
 <% } -%>
+<% if (documentclass == 'scientific-thesis') { -%>
 
+%%% ===============================================================================
+\appendix
+\addcontentsline{toc}{chapter}{Anhang}
+
+%\listoffigures
+%\listoftables
+%%% ===============================================================================
+
+%%% ===============================================================================
+%<%= heading1 %>{My first appendix}\label{sec:appendix1}
+%%% ===============================================================================
+
+\pagestyle{empty}
+\renewcommand*{\chapterpagestyle}{empty}
+\Versicherung
+<% } -%>
 \end{document}
