Correct `\keywords{}` syntax for LCNS

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -373,11 +373,10 @@
 \lipsum[1]
 <% } -%>
 <% switch (documentclass) { case "lncs": -%>
+
+\keywords{First keyword \and Second keyword \and Third keyword}
 \end{abstract}
 
-\begin{keywords}
-  keyword1, keyword2
-\end{keywords}
 <% break; case "acmart": -%>
 \end{abstract}
 
