--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -838,9 +838,9 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
 
 \renewcommand{\bibsection}{\section*{References}} % requried for natbib to have "References" printed and as section*, not chapter*
 % Use natbib compatbile splncsnat style.
-% It does provide all features of splncs03, but is developed in a clean way.
-% Source: http://phaseportrait.blogspot.de/2011/02/natbib-compatible-bibtex-style-bst-file.html
-\bibliographystyle{splncsnat}
+% It does provide all features of splncs04.bst, but is developed in a clean way.
+% Source: https://github.com/tpavlic/splncs04nat
+\bibliographystyle{splncs04nat}
 \begingroup
   \microtypecontext{expansion=sloppy}
   \small % ensure correct font size for the bibliography
