--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -682,8 +682,10 @@ An interpretation can only be followed after all results have been described. Th
 \lipsum[1-3]\todo{Refine me}
 
 The remainder of the paper starts with a presentation of related work (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:relatedwork}).
-<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:latexhints}).<% } -%>
-<% if (!examples && (documentclass == 'ieee')) { %>Afterwards, we present some Lorem Ipsum (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:loremipsum}).<% } -%>
+<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:latexhints}).<% }
+-%>
+<% if (!examples && (documentclass == 'ieee')) { %>Afterwards, we present some Lorem Ipsum (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:loremipsum}).<% }
+-%>
 Finally, a conclusion is drawn and outlook on future work is made (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:outlook}).
 
 <%= heading1 %>{Related Work}
