--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -373,11 +373,10 @@
 \lipsum[1]
 <% } -%>
 <% switch (documentclass) { case "lncs": -%>
+
+\keywords{First keyword \and Second keyword \and Third keyword}
 \end{abstract}
 
-\begin{keywords}
-  keyword1, keyword2
-\end{keywords}
 <% break; case "acmart": -%>
 \end{abstract}
 
@@ -683,8 +682,10 @@ An interpretation can only be followed after all results have been described. Th
 \lipsum[1-3]\todo{Refine me}
 
 The remainder of the paper starts with a presentation of related work (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:relatedwork}).
-<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:latexhints}).<% } -%>
-<% if (!examples && (documentclass == 'ieee')) { %>Afterwards, we present some Lorem Ipsum (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:loremipsum}).<% } -%>
+<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:latexhints}).<% }
+-%>
+<% if (!examples && (documentclass == 'ieee')) { %>Afterwards, we present some Lorem Ipsum (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:loremipsum}).<% }
+-%>
 Finally, a conclusion is drawn and outlook on future work is made (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~\ref<% } else { %>Section~\ref<% } %>{sec:outlook}).
 
 <%= heading1 %>{Related Work}
@@ -696,11 +697,7 @@ The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } e
 
 <% if (examples) { -%>
 <%= heading1 %>{LaTeX Hints}
-<% if (documentclass == 'lncs') { -%>
 \label{sec:latexhints}
-<% } else { -%>
-\label{chap:latexhints}
-<% } -%>
 
 <% if (useExampleEnvironment) { -%>
 % Required for proper example rendering in the compiled PDF
@@ -839,9 +836,9 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
 
 \renewcommand{\bibsection}{\section*{References}} % requried for natbib to have "References" printed and as section*, not chapter*
 % Use natbib compatbile splncsnat style.
-% It does provide all features of splncs03, but is developed in a clean way.
-% Source: http://phaseportrait.blogspot.de/2011/02/natbib-compatible-bibtex-style-bst-file.html
-\bibliographystyle{splncsnat}
+% It does provide all features of splncs04.bst, but is developed in a clean way.
+% Source: https://github.com/tpavlic/splncs04nat
+\bibliographystyle{splncs04nat}
 \begingroup
   \microtypecontext{expansion=sloppy}
   \small % ensure correct font size for the bibliography
