--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -37,13 +37,13 @@
 % it is good to have title printed on the pages, too.
 %
 % To disable outputting page headers and footers, remove "runningheads"
-\documentclass[runningheads,a4paper,english]{llncs}[2022/01/12]
+\documentclass[runningheads,<%= papersize %>paper,english]{llncs}[2022/01/12]
 <% break; case "acmart": -%>
 
 <% if (texlive >= 2021) { -%>
 % We balance the last page using the package "pbalance" (see https://ctan.org/pkg/pbalance), because it "just works" (in contrast to balance.sty or other solutions)
 <% } -%>
-\documentclass[<%= acm_format %>,<% if (acm_review) { %>review,<% } %><% if (texlive >= 2021) { %>pbalance<% } else { %>balance<% } %>]{acmart}
+\documentclass[<%= acm_format %>,<% if (acm_review) { %>review,<% } %><%= papersize %>paper,<% if (texlive >= 2021) { %>pbalance<% } else { %>balance<% } %>]{acmart}
 <% break; case "ieee": -%>
 
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
