Refine description of usage of [llncsconf](https://ctan.org/pkg/llncsconf) package.

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -218,17 +218,20 @@
 <% break; case "lncs": -%>
 
 % Add copyright
-% Do that for the final version or if you send it to colleagues
+%
+% This is recommended if you intend to send the version to colleagues
+% See https://ctan.org/pkg/llncsconf for details
 \iffalse
-  %state: intended|submitted|llncs
-  %you can add "crop" if the paper should be cropped to the format Springer is publishing
+  % state: intended | submitted | llncs
+  % you can add "crop" if the paper should be cropped to the format Springer is publishing
   \usepackage[intended]{llncsconf}
 
   \conference{name of the conference}
 
-  %in case of "llncs" (final version!)
-  %example: llncs{Anonymous et al. (eds). \emph{Proceedings of the International Conference on \LaTeX-Hacks}, LNCS~42. Some Publisher, 2016.}{0042}
-  \llncs{book editors and title}{0042} %% 0042 is the start page
+  % in case of "proceedings" (final version!)
+  % example: \llncs{Anonymous et al. (eds). \emph{Proceedings of the International Conference on \LaTeX-Hacks}, LNCS~42. Some Publisher, 2016.}{0042}
+  % 0042 denotes an example start page
+  \llncs{book editors and title}{0042}
 \fi
 <% break; case "scientific-thesis": -%>
 
