--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -15,7 +15,7 @@
 \end{lstlisting}
 <%- eexample %>
 
-One can also add \verb+float+ as paramter to have the listing floating.
+One can also add \verb+float+ as parameter to have the listing floating.
 <% if (cleveref) { %>\Cref<% } else { %>Listing~\ref<% } %>{lst:flXML} shows the floating listing.
 
 <%- bexample %>
