--- a/generators/app/templates/minted.example.en.tex
+++ b/generators/app/templates/minted.example.en.tex
@@ -1,6 +1,6 @@
 <%= heading2 %>{Source Code}
 
-\href{https://github.com/gpoore/minted}{minted} is a sophisticated packes to enable properly highlighted listings.
+\href{https://github.com/gpoore/minted}{minted} is a sophisticated package to enable properly highlighted listings.
 It uses the \href{http://pygments.org/}{pygments} library, which in turn requires Python.
 
 <%- bexample %>
