Stick to cleveref

--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -1,8 +1,8 @@
 <%= heading2 %>{Source Code}
 
 <%- bexample %>
-<% if (cleveref) { %>\Cref<% } else { %>Listing~\ref<% } %>{lst:XML} shows source code written in XML.
-<% if (cleveref) { %>\Cref<% } else { %>Line~\ref<% } %>{line:comment} contains a comment.
+\Cref{lst:XML} shows source code written in XML.
+\Cref{line:comment} contains a comment.
 
 \begin{lstlisting}[
   language=XML,
@@ -16,7 +16,7 @@
 <%- eexample %>
 
 One can also add \verb+float+ as parameter to have the listing floating.
-<% if (cleveref) { %>\Cref<% } else { %>Listing~\ref<% } %>{lst:flXML} shows the floating listing.
+\Cref{lst:flXML} shows the floating listing.
 
 <%- bexample %>
 \begin{lstlisting}[
@@ -33,7 +33,7 @@ One can also add \verb+float+ as parameter to have the listing floating.
 \end{lstlisting}
 <%- eexample %>
 
-One can also typeset JSON as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:json}.
+One can also typeset JSON as shown in \cref{lst:json}.
 
 <%- bexample %>
 \begin{lstlisting}[
@@ -47,7 +47,7 @@ One can also typeset JSON as shown in <% if (cleveref) { %>\cref<% } else { %>Li
 \end{lstlisting}
 <%- eexample %>
 
-Java is also possible as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:java}.
+Java is also possible as shown in \cref{lst:java}.
 
 <%- bexample %>
 \begin{lstlisting}[
