--- a/generators/app/templates/subfloat.example.en.tex
+++ b/generators/app/templates/subfloat.example.en.tex
@@ -1,6 +1,6 @@
 <%= heading2 %>{Sub Figures}
 
-An example of two sub figures is shown in <% if (cleveref) { %>\cref<% } else { %>Fig.~\ref<% } %>{fig:two_sub_figures}.
+An example of two sub figures is shown in \cref{fig:two_sub_figures}.
 
 <%- bexample %>
 \begin{figure<% if (documentclass == 'ieee') { %>*<% } %>}[!b]
@@ -23,7 +23,7 @@ Be aware that for subfig.sty to generate the (a), (b), etc., subfigure
 labels, the optional argument to \verb+\subfloat+ must be present. If a
 subcaption is not desired, just leave its contents blank,
 e.g., \verb+\subfloat[]+.
-An example is shown in <% if (cleveref) { %>\cref<% } else { %>Fig.~\ref<% } %>{fig:two_sub_figures_ieee}.
+An example is shown in \cref{fig:two_sub_figures_ieee}.
 
 <%- bexample %>
 \begin{figure*}[!b]
