--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -1,11 +1,7 @@
 <%= heading2 %>{Figures}
 
 <%- bexample %>
-<% if (cleveref) { -%>
 \Cref{fig:label} shows something interesting.
-<% } else { -%>
-Figure~\ref{fig:label} shows something interesting.
-<% } -%>
 
 \begin{figure}
   \centering
@@ -17,8 +13,8 @@ Figure~\ref{fig:label} shows something interesting.
 <%- include('floatflt.example.en.tex', this); %>
 <% if (documentclass == 'ieee') { -%>
 
-One can span a figure across mulitple columns by using \verb+\begin{figure*}+.
-See <% if (cleveref) { %>\cref<% } else { %>Fig.~\ref<% } %>{fig:16x9} as an example.
+One can span a figure across multiple columns by using \verb+\begin{figure*}+.
+See \cref{fig:16x9} as an example.
 
 <%- bexample %>
 \begin{figure*}
