--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -6,6 +6,7 @@
 
 <% } -%>
 % !TeX spellcheck = de-DE
+% LTeX: language=de-DE
 % !TeX encoding = utf8
 % !TeX program = <%= latexcompiler %>
 % !BIB program = <%= bibtextool %>
@@ -126,7 +127,7 @@
 <%- include('siunitx.preamble.en.tex'); %>
 <%- include('hyperref.preamble.de.tex', this); %>
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
-<% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } -%>
+<%- include('cleveref.preamble.de.tex', this); %>
 
 \usepackage{lipsum}
 <% if (examples) { -%>
@@ -234,9 +235,9 @@
 \label{sec:intro}
 \lipsum[1-3]\todo{Refine me}
 
-The remainder of the paper starts with a presentation of related work (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~<% } else { %>Section~<% } %>{sec:relatedwork}).
-<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~<% } else { %>Section~<% } %>{sec:latexhints}).<% } -%>
-Finally, a conclusion is drawn and outlook on future work is made (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~<% } else { %>Section~<% } %>{sec:outlook}).
+The remainder of the paper starts with a presentation of related work (\cref{sec:relatedwork}).
+<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:latexhints}).<% } -%>
+Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:outlook}).
 
 \section{Related Work}
 \label{sec:relatedwork}
@@ -409,7 +410,7 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <%- include('siunitx.example.en.tex', this); %>
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
 <% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.de.tex', this); %><% } -%>
-<% if (cleveref) { %><%- include('cleveref.example.en.tex', this); %><% } -%>
+<%- include('cleveref.example.en.tex', this); %>
 <%- include('figure.example.de.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
 <% if (listings == 'listings') { -%>
