--- a/generators/app/templates/minted.example.en.tex
+++ b/generators/app/templates/minted.example.en.tex
@@ -4,7 +4,7 @@
 It uses the \href{http://pygments.org/}{pygments} library, which in turn requires Python.
 
 <%- bexample %>
-<% if (cleveref) { %>\Cref<% } else { %>Listing~\ref<% } %>{lst:XML} shows source code written in XML.
+\Cref{lst:XML} shows source code written in XML.
 \refline{line:comment} contains a comment.
 
 \begin{listing}[htbp]
@@ -19,7 +19,7 @@ It uses the \href{http://pygments.org/}{pygments} library, which in turn require
 \end{listing}
 <%- eexample %>
 
-One can also typeset JSON as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:flJSON}.
+One can also typeset JSON as shown in \cref{lst:flJSON}.
 
 <%- bexample %>
 \begin{listing}[htbp]
@@ -33,7 +33,7 @@ One can also typeset JSON as shown in <% if (cleveref) { %>\cref<% } else { %>Li
 \end{listing}
 <%- eexample %>
 
-Java is also possible as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:flJava}.
+Java is also possible as shown in \cref{lst:flJava}.
 
 <%- bexample %>
 \begin{listing}[htbp]
