--- a/generators/app/templates/minted.example.en.tex
+++ b/generators/app/templates/minted.example.en.tex
@@ -45,6 +45,6 @@ public class Hello {
 }
 \end{minted}
   \caption{Java code rendered using minted}
-  \label{lst:java}
+  \label{lst:flJava}
 \end{listing}
 <%- eexample %>
