--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -684,10 +684,10 @@ An interpretation can only be followed after all results have been described. Th
 \lipsum[1-3]\todo{Refine me}
 
 The remainder of the paper starts with a presentation of related work (\cref{sec:relatedwork}).
-<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:latexhints}).<% }
--%>
-<% if (!examples && (documentclass == 'ieee')) { %>Afterwards, we present some Lorem Ipsum (\cref{sec:loremipsum}).<% }
--%>
+<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:latexhints}).
+<% } -%>
+<% if (!examples && (documentclass == 'ieee')) { %>Afterwards, we present some Lorem Ipsum (\cref{sec:loremipsum}).
+<% } -%>
 Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:outlook}).
 
 <%= heading1 %>{Related Work}
