Fix breaking in listings for minted

--- a/generators/app/templates/minted.preamble.en.tex
+++ b/generators/app/templates/minted.preamble.en.tex
@@ -1,7 +1,18 @@
 \usepackage[newfloat]{minted}
 
-% Line numbers not flowing out of the margin
-\setminted{numbersep=5pt, xleftmargin=12pt}
+\setminted{
+    % Line numbers not flowing out of the margin
+    numbersep=5pt,
+    xleftmargin=12pt,
+    %
+    % Better listing breaking
+    breakafter=-/\{,
+    breakbefore=\\
+    %
+    % Alternative: Rely on pygment's tokenizer. Does not work well with LaTeX and comments
+    % breakbytoken=true,
+    % breakbytokenanywhere=true
+}
 
 \usemintedstyle{bw} %black and white style
 %\usemintedstyle{vs} %visual studio
