Add LTeX: language=en-US

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -9,6 +9,7 @@
 
 <% break; } -%>
 % !TeX spellcheck = en-US
+% LTeX: language=en-US
 % !TeX encoding = utf8
 % !TeX program = <%= latexcompiler %>
 <% if (requiresShellEscape) { -%>
