Fix usage of splncs04nat for German

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -837,7 +837,7 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
 <% switch (documentclass) { case "lncs": -%>
 
 \renewcommand{\bibsection}{\section*{References}} % requried for natbib to have "References" printed and as section*, not chapter*
-% Use natbib compatbile splncsnat style.
+% Use natbib compatbile splncs04nat style.
 % It does provide all features of splncs04.bst, but is developed in a clean way.
 % Source: https://github.com/tpavlic/splncs04nat
 \bibliographystyle{splncs04nat}
