--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -413,11 +413,16 @@ Hier bitte einen kurzen Durchgang durch die Arbeit.
 Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiele vorliegen hat, um sofort loszulegen.
 
 <%- include('paragraphs.example.de.tex', this); %>
-<% if (texlive >= 2021) { %><%- include('mindflow.example.en.tex', this); %><% } -%>
+<% if (texlive >= 2021) { %><%- include('mindflow.example.en.tex', this); %>
+<% } -%>
 <%- include('hyphenation.example.en.tex', this); %>
 <%- include('siunitx.example.en.tex', this); %>
-<% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
-<% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.de.tex', this); %><% } -%>
+<% if (enquotes == 'csquotes') { %><%- include('csquotes.example.en.tex', this); %>
+<% } -%>
+<% if (enquotes == 'textcmds') { %><%- include('textcmds.example.en.tex', this); %>
+<% } -%>
+<% if (enquotes == 'plainlatex') { %><%- include('plainlatex.enquotes.example.de.tex', this); %>
+<% } -%>
 <%- include('cleveref.example.en.tex', this); %>
 <%- include('figure.example.de.tex', this); %>
 <%- include('subfloat.example.en.tex', this); %>
