--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -94,6 +94,17 @@
   %               draft    % um zu sehen, wo noch nachgebessert werden muss - wichtig, da Bindungskorrektur mit drin
   draft=false
 ]{scrbook}
+\usepackage{scrlayer-scrpage}
+\ihead[]{}
+\chead[]{}
+\ohead[]{\headmark}
+\cfoot[]{}
+\ofoot[\usekomafont{pagenumber}\thepage]{\usekomafont{pagenumber}\thepage}
+\ifoot[]{}
+<% break; default: -%>
+
+% not yet supported template. Please report to the author of generator-latex-template
+\documentclass{scrbook}
 <% } -%>
 
 % backticks (`) werden als solches in verbatim-Umgebungen dargestellt
