--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -134,13 +134,13 @@
 <% if (listings == 'listings') { -%>
 <%- include('listings.preamble.de.tex', this); -%>
 <% } else { -%>
-<%- include('minted.preamble.en.tex', this); %>
+<%- include('minted.preamble.en.tex', this); -%>
 <% } -%>
 
-<% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
-<% if (enquotes == 'textcmds')  { %><%- include('textcmds.preamble.en.tex', this); %><% } -%>
+<% if (enquotes == 'csquotes') { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
+<% if (enquotes == 'textcmds') { %><%- include('textcmds.preamble.en.tex', this); %><% } -%>
 
-<%- include('booktabs.preamble.en.tex', this); %>
+<%- include('booktabs.preamble.en.tex', this); -%>
 <%- include('paralist.preamble.en.tex', this); %>
 <% if (documentclass == 'lncs')  { -%>
 <%- include('floatflt.preamble.en.tex', this); %>
